syntax = "proto3";

package syncmsg.pb;

message ContactSyncMessage {
    // 同步步骤
    enum Type {
        SUMMARY = 0; // 第一步，总摘要        <id1,id2,len>
        RANGE_HASH = 1; // 第二步，区间hash     <id1, id2, hash>
        RANGE_IDS = 2; // 第三步，区间msgid     <id1, id2, msgid...>
        PUSH_MSG = 3; // 第四步，发送消息       <msg...>
        PULL_MSG = 4; // 第五步，获取消息 <id1, id2 ...>
        DONE = 5; // 同步完成
    }

    Type    type = 1; // 具体步骤
    bytes   payload = 3; // 具体内容
}

// 第一步，总摘要
message ContactDataSummary  {
    string head_id = 2;
    string tail_id = 3;
    int32  length = 4;
    uint64 lamptime = 5;
    bool   is_end = 6;
}

// 第二步，区间HASH
message ContactDataRangeHash  {
    string start_id = 1;
    string end_id = 2;
    bytes  hash  = 3;
}

// 第三步，区间消息ID
message ContactDataRangeIDs  {
    string  start_id = 1;
    string  end_id = 2;
    repeated string ids = 3;
}

// 第五步，获取缺失消息
message ContactDataPullMsg {
    repeated string ids = 1;
}